--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,24 @@
 {
-  "short_name": "Savy",
-  "name": "Savy: Smart Finance Manager",
-  "icons": [
-    {
-      "src": "/icons/icon-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "maskable"
-    }
-  ],
-  "start_url": "/",
-  "background_color": "#0f172a",
-  "display": "standalone",
-  "scope": "/",
-  "theme_color": "#6366f1",
-  "description": "Smart Personal Finance Manager"
+    "short_name": "Savy",
+    "name": "Savy: Smart Finance Manager",
+    "icons": [
+        {
+            "src": "/app-logo.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "/app-logo.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any"
+        }
+    ],
+    "start_url": "/",
+    "background_color": "#0f172a",
+    "display": "standalone",
+    "scope": "/",
+    "theme_color": "#6366f1",
+    "description": "Smart Personal Finance Manager"
 }
